--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>  
 <body>
 <div class="all">
-	<div id="card">
+<div class="card">
 	<video id="vid" width="420" eight="240" controls>
 		<source src="websprite/images/vid1.mp4" type="video/mp4">
 	  Your browser does not support the video tag.
@@ -18,29 +18,42 @@
 	<div id="button">
 		<p>Next Vid</p>
 	</div>
-	</div>
+</div>
 <div class="navigation">
-	<div class="row1">
-			<img id="print" border="0" width=140" height="auto"
+	<div class="buttons">
+			<img id="print"  width="100" height="100"
 		 	alt="print" src="print.gif">
 			</img>
 
-			<a href="websprite/Java/json.html"><img border="0" width=140" height="auto" alt="email" src="interface.gif"</a></span>
-	</div>
-	<div class="row2">
-			<a href="4fun.html"><img border="0" width="140" height="auto" alt="email" src="4fun.gif"</a>
+			<img id="inter"  width="100" height="100" alt="email" src="interface.gif"></img>
 
-			<span id="proj"></span>
+			<img id="4fun"  width="100" height="100" alt="email" src="4fun.gif"></img>
 
-			<a href="social.html"><img border="0" width=140" height="auto"alt="email" src="social.gif"</a>
-	</div>
-	<div class="row3">
-			<a href="https://salal812.github.io/websprite/cv.html"><img border="0" width=140" height="auto" alt"cv" src="cv.gif"></a>
+			<img id="social"  width="100" height="100" alt="email" src="social.gif"></img>
 
-			<a href="mailto: lousalazarcastillo@gmail.com"><img border="0" width=140" height="auto" alt="email" src="email.gif"</a>
+			<img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
+
+			<img id="email"  width="100" height="100" alt="email" src="email.gif"></img>
+			
+			
+			<img id="close"  width="100" height="100" alt="esc" src="websprite/images/close.gif"></img>
 	</div>
-	<iframe id="mary" src="https://salal812.github.io/websprite/magdalene.html"></iframe>
+	<div class ="projects">
+		<div id="mary">
+			<a href="https://salal812.github.io/websprite/magdalene.html">
+			<iframe src="https://salal812.github.io/websprite/magdalene.html" height="600" width="700" title="magdalene"></iframe></a>
+		</div>
+		<div id="java">
+			<a href="websprite/Java/json.html">
+				<iframe src="websprite/Java/json.html" height="600" width="700" title="happy"></iframe></a>
+		</div>
+		<div id="resume">
+			<a href="websprite/cv.html">
+				<iframe src="websprite/cv.html" height="600" width="700" title="happy"></iframe></a>
+		</div>
+	</div>
 </div>
+
 </div>
 <!----	<h3> Lab Projects </h3>
 	<ul>
