--- a/websprite/magdalene.html
+++ b/websprite/magdalene.html
@@ -9,21 +9,14 @@
     <title>Wikibook</title>
 </head>
 <body>
-    <table>
-        <thead>
-          <tr>
-            <th><h1> Mary Magdalene Wikibook</h1></th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>This book is about this a ns dd hshd uhdhd g hd hd d</td>
-            <td><img src="./images/Magdalene.gif"></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td><div class="container">
+    <div class="proj1">
+        <div class="head">
+            <h1>Mary Magdalene<br> WikiBook</h1>
+            <h2>2020</h2>
+            <img src="./images/magdalenemockeup.png" width="20%" height="20%"></img>
+        </div>
+        <img src="./images/Magdalene.gif" width="30%">
+        <div class="container">
                 <div class="mySlides">
                   <div class="numbertext">1 / 34</div>
                   <img src="./images/maryspread2.jpg" style="width:60%">
@@ -167,15 +160,32 @@
                 </div>
                 <a class="prev" onclick="plusSlides(-1)">❮</a>
                 <a class="next" onclick="plusSlides(1)">❯</a>
-            </td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr>
-            <td></td>
-            <td></td>
-          </tr>
-        </tfoot>
-      </table>
+            </div>
+      </div>
+      <div class="proj2">
+        <h1>Gallery Posters</h1>
+        <h2>2020</h2>
+        <div class="posters">
+          <img src="/websprite/images/nikimockup1.png" width="60%"></img>
+          <img src="/websprite/images/nikimockup2.png" width="60%"></img>
+        </div>
+      </div>
+      <div class="proj3">
+          <h1>Holy Type</h1>
+          <h2>2020</h2>
+          <div class="posters">
+          <img src="./images/typecross.png" width="60%">
+          <img src="./images/modernists.png" width="60%">
+          </div>
+      </div>
+      <div class="proj4">
+          <h1>Manifesto Poster</h1>
+          <h2>2020</h2>
+          <div class="posters">
+          <img src="./images/manifesto1.jpg" width="50%"></img>
+          <img src="./images/manifesto2.png" width="50%"></img>
+          </div>
+      </div>
+      <img id="close"  width="100" height="100" alt="esc" src="websprite/images/close.gif"></img>
 </body>
 </html>
