--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>  
 <body>
 <div class="all">
+	<h1>Lourdes Salazar</h1>
 <div class="card">
 	<video id="vid" width="420" eight="240" controls>
 		<source src="websprite/images/vid1.mp4" type="video/mp4">
@@ -33,9 +34,6 @@
 
 			<img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
 
-			<img id="email"  width="100" height="100" alt="email" src="email.gif"></img>
-			
-			
 			<img id="close"  width="100" height="100" alt="esc" src="websprite/images/close.gif"></img>
 	</div>
 	<div class ="projects">
