--- a/websprite/index.html
+++ b/websprite/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=d4vice-width, 4nitial-scale=1.0">
 	  <title>Lou</title>
 	<link href="https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styleslou.css">
   </head>  
 <body>
 <div class="all">
 	<h1>Lourdes Salazar</h1>
 <div class="card">
 	<video id="vid" width="420" eight="240" controls>
-		<source src="websprite/images/vid1.mp4" type="video/mp4">
+		<source src="./images/vid1.mp4" type="video/mp4">
 	  Your browser does not support the video tag.
 	  </video>
 	<div id="button">
@@ -34,7 +34,7 @@
 
 			<img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
 
-			<img id="close"  width="100" height="100" alt="esc" src="websprite/images/close.gif"></img>
+			<img id="close"  width="100" height="100" alt="esc" src="./images/close.gif"></img>
 	</div>
 	<div class ="projects">
 		<div id="mary">
@@ -43,11 +43,11 @@
 		</div>
 		<div id="java">
 			<a href="websprite/Java/json.html">
-				<iframe src="websprite/Java/json.html" height="600" width="700" title="happy"></iframe></a>
+				<iframe src="./Java/json.html" height="600" width="700" title="happy"></iframe></a>
 		</div>
 		<div id="resume">
-			<a href="websprite/cv.html">
-				<iframe src="websprite/cv.html" height="600" width="700" title="happy"></iframe></a>
+			<a href="cv.html">
+				<iframe src="cv.html" height="600" width="700" title="happy"></iframe></a>
 		</div>
 	</div>
 </div>
