--- a/websprite/index.html
+++ b/websprite/index.html
@@ -42,7 +42,7 @@
 			<iframe src="https://salal812.github.io/websprite/magdalene.html" height="600" width="700" title="magdalene"></iframe></a>
 		</div>
 		<div id="java">
-			<a href="websprite/Java/json.html">
+			<a href="./Java/json.html">
 				<iframe src="./Java/json.html" height="600" width="700" title="happy"></iframe></a>
 		</div>
 		<div id="resume">
