--- a/websprite/index.html
+++ b/websprite/index.html
@@ -10,7 +10,7 @@
   </head>  
 <body>
 <div class="all">
-	<h1>Lourdes Salazar</h1>
+    <h1>Lourdes <br>Salazar</h1>
 <div class="card">
 	<video id="vid" width="420" eight="240" controls>
 		<source src="./images/vid1.mp4" type="video/mp4">
@@ -19,8 +19,10 @@
 	<div id="button">
 		<p>Next Vid</p>
 	</div>
+    <img id="email"  width="100" height="100" alt="cv" src="email.gif"></img>
 </div>
 <div class="navigation">
+    <h3>click the buttons to open new windows!</h3>
 	<div class="buttons">
 			<img id="print"  width="100" height="100"
 		 	alt="print" src="print.gif">
@@ -34,7 +36,8 @@
 
 			<img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
 
-			<img id="close"  width="100" height="100" alt="esc" src="./images/close.gif"></img>
+            <img id="cv"  width="100" height="80" alt="cv" src="gallery.gif"></img>
+            
 	</div>
 	<div class ="projects">
 		<div id="mary">
@@ -50,6 +53,7 @@
 				<iframe src="cv.html" height="600" width="700" title="happy"></iframe></a>
 		</div>
 	</div>
+    <img id="close"  width="100" height="100" alt="esc" src="./images/close.gif"></img>
 </div>
 
 </div>
