--- a/websprite/index.html
+++ b/websprite/index.html
@@ -30,7 +30,7 @@
 
 			<img id="inter"  width="100" height="100" alt="email" src="interface.gif"></img>
 
-			<img id="4fun"  width="100" height="100" alt="email" src="4fun.gif"></img>
+			<img id="fun"  width="100" height="100" alt="email" src="4fun.gif"></img>
 
 			<img id="social"  width="100" height="100" alt="email" src="social.gif"></img>
 
@@ -43,6 +43,10 @@
 		<div id="mary">
 			<a href="https://salal812.github.io/websprite/magdalene.html">
 			<iframe src="https://salal812.github.io/websprite/magdalene.html" height="600" width="700" title="magdalene"></iframe></a>
+		</div>
+        <div id="web">
+			<a href="inone.html">
+				<iframe src="inone.html" height="600" width="700" title="web"></iframe></a>
 		</div>
 		<div id="java">
 			<a href="./Java/json.html">
