--- a/websprite/magdalene.html
+++ b/websprite/magdalene.html
@@ -185,7 +185,12 @@
           <img src="./images/manifesto1.jpg" width="50%"></img>
           <img src="./images/manifesto2.png" width="50%"></img>
           </div>
+        </div>
+        <div class="proj5">
+            <h1>more</h1>
+            <img src="./images/aslost.png" width="40%"></div>
+
+        </div>
       </div>
-      <img id="close"  width="100" height="100" alt="esc" src="websprite/images/close.gif"></img>
 </body>
 </html>
