--- a/websprite/index.html
+++ b/websprite/index.html
@@ -20,6 +20,7 @@
 		<p>Next Vid</p>
 	</div>
     <img id="email"  width="100" height="100" alt="cv" src="email.gif"></img>
+    <img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
 </div>
 <div class="navigation">
     <h3>click the buttons to open new windows!</h3>
@@ -34,7 +35,9 @@
 
 			<img id="social"  width="100" height="100" alt="email" src="social.gif"></img>
 
-			<img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
+            <img id="catalogue"  width="80" height="50" alt="email" src="images/catalogue.gif"></img>
+
+            <img id="heel"  width="80" height="50" alt="email" src="images/clickheels.gif"></img>
 
             <img id="cv"  width="100" height="80" alt="cv" src="gallery.gif"></img>
             
