--- a/websprite/inone.html
+++ b/websprite/inone.html
@@ -8,12 +8,26 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>2021 Digital Product Design Case Study
+    <div class="inone">
+    <h3>2021 Digital Product Design Case Study <br>
 
         INONE is a media aggregator app designed by Pablo Gonzalez, Joyce Chan, June Huang, and Lou Salazar.</h3>
+    <div id="slides">    
+        <div id="prev">prev</div>
+        <img src="/websprite/images/inone1.jpg" height="680px" id="pic">
         <div id="next">next</div>
-    <div id="prev">prev</div>
-    <img src="/websprite/images/inone1.jpg" height="680px" id="pic">
+    </div>
+    </div>
+    <div class="loom">
+        <h3>2021 Digital Product Design Case Study <br>
+    
+            Loom is a time banking app where the currency is time this app was meant to imitate and app that would belong in the gig economy inspired by the concept of time banking this app case study is meant to imitate the idealism of some of this digital spaces. (Not actually meant to be a real app but more of an exercise in ux/ui that is more so than anything a bit satirical) </h3>
+        <div id="slides">    
+            <div id="prev">prev</div>
+            <img src="/websprite/images/loom1.jpg" height="680px" id="pic2">
+            <div id="next">next</div>
+        </div>
+        </div>
 </body>
 <script src="inone.js"></script>
 </html>
