--- a/websprite/inone.html
+++ b/websprite/inone.html
@@ -14,7 +14,7 @@
         INONE is a media aggregator app designed by Pablo Gonzalez, Joyce Chan, June Huang, and Lou Salazar.</h3>
     <div id="slides">    
         <div id="prev">prev</div>
-        <img src="/websprite/images/inone1.jpg" height="680px" id="pic">
+        <img src="./images/inone1.jpg" height="680px" id="pic">
         <div id="next">next</div>
     </div>
     </div>
@@ -24,7 +24,7 @@
             Loom is a time banking app where the currency is time this app was meant to imitate and app that would belong in the gig economy inspired by the concept of time banking this app case study is meant to imitate the idealism of some of this digital spaces. (Not actually meant to be a real app but more of an exercise in ux/ui that is more so than anything a bit satirical) </h3>
         <div id="slides">    
             <div id="prev">prev</div>
-            <img src="/websprite/images/loom1.jpg" height="680px" id="pic2">
+            <img src="./images/loom1.jpg" height="680px" id="pic2">
             <div id="next">next</div>
         </div>
         </div>
