--- a/websprite/magdalene.html
+++ b/websprite/magdalene.html
@@ -166,8 +166,8 @@
         <h1>Gallery Posters</h1>
         <h2>2020</h2>
         <div class="posters">
-          <img src="/websprite/images/nikimockup1.png" width="60%"></img>
-          <img src="/websprite/images/nikimockup2.png" width="60%"></img>
+          <img src="./images/nikimockup1.png" width="60%"></img>
+          <img src="./images/nikimockup2.png" width="60%"></img>
         </div>
       </div>
       <div class="proj3">
