--- a/otw2/index.html
+++ b/otw2/index.html
@@ -9,7 +9,7 @@
  <body>
 <a href="https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_fullscreen_video">
 <video autoplay muted loop id="myVideo">
-  <source src="drive1_2.mov" type="video/mp4">
+  <source src="drive1.mov" type="video/mp4">
 </video>
 </a>
 </body>
