--- a/websprite/motion.html
+++ b/websprite/motion.html
@@ -7,6 +7,11 @@
     <title>Motion Graphics</title>
 </head>
 <body>
-    <img src=""
+    <img src="./images/tear.gif">
+    <img src="./images/cake.gif">
+    <img src="./images/lush.gif">
+    <img src="./images/squares.gif">
+    <img src="./images/trip.gif">
+    
 </body>
 </html>
