--- a/websprite/index.html
+++ b/websprite/index.html
@@ -11,18 +11,25 @@
 <body>
 <div class="all">
     <h1>Lourdes <br>Salazar</h1>
-	<div class="card">
-			<video id="vid" width="420" eight="240" controls>
-			<source src="./images/vid1.mp4" type="video/mp4">
-	 	 	Your browser does not support the video tag.
-			</video>
-		<div id="button">
-			<p>Next Vid</p>
-		</div>
-    <img id="email"  width="100" height="100" alt="cv" src="email.gif"></img>
-    <img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
+<div class ="projects">
+	<div id="mary">
+		<a href="https://salal812.github.io/websprite/magdalene.html">
+		<iframe src="https://salal812.github.io/websprite/magdalene.html" height="600" width="700" title="magdalene"></iframe></a>
+	</div>
+	<div id="web">
+		<a href="inone.html">
+			<iframe src="inone.html" height="600" width="700" title="web"></iframe></a>
+	</div>
+	<div id="java">
+		<a href="./Java/json.html">
+			<iframe src="./Java/json.html" height="600" width="700" title="happy"></iframe></a>
+	</div>
+	<div id="resume">
+		<a href="cv.html">
+			<iframe src="cv.html" height="600" width="700" title="happy"></iframe></a>
+	</div>
 </div>
-<div class="navigation">
+<!----<img id="close"  width="100" height="100" alt="esc" src="./images/close.gif"></img>-->
     <h3>click the buttons to open new windows!</h3>
 	<div class="buttons">
 			<img id="print"  width="100" height="100"
@@ -40,27 +47,18 @@
             <img id="heel"  width="80" height="50" alt="email" src="images/clickheels.gif"></img>
 
             <img id="cv"  width="100" height="80" alt="cv" src="gallery.gif"></img>
-            
+    </div>
+	<div class="card">
+		<video id="vid" width="420" eight="240" controls>
+		<source src="./images/vid1.mp4" type="video/mp4">
+		  Your browser does not support the video tag.
+		</video>
+	<div id="button">
+		<p>Next Vid</p>
 	</div>
-	<div class ="projects">
-		<div id="mary">
-			<a href="https://salal812.github.io/websprite/magdalene.html">
-			<iframe src="https://salal812.github.io/websprite/magdalene.html" height="600" width="700" title="magdalene"></iframe></a>
-		</div>
-        <div id="web">
-			<a href="inone.html">
-				<iframe src="inone.html" height="600" width="700" title="web"></iframe></a>
-		</div>
-		<div id="java">
-			<a href="./Java/json.html">
-				<iframe src="./Java/json.html" height="600" width="700" title="happy"></iframe></a>
-		</div>
-		<div id="resume">
-			<a href="cv.html">
-				<iframe src="cv.html" height="600" width="700" title="happy"></iframe></a>
-		</div>
-	</div>
-    <img id="close"  width="100" height="100" alt="esc" src="./images/close.gif"></img>
+<img id="email"  width="100" height="100" alt="cv" src="email.gif"></img>
+<img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
+</div>
 </div>
 
 </div>
