--- a/websprite/index.html
+++ b/websprite/index.html
@@ -10,7 +10,7 @@
   </head>  
 <body>
 <div class="all">
-    <h1>Lourdes <br>Salazar</h1>
+    <h1>Lourdes Salazar</h1>
 <div class ="projects">
 	<div id="mary">
 		<a href="https://salal812.github.io/websprite/magdalene.html">
@@ -30,7 +30,6 @@
 	</div>
 </div>
 <!----<img id="close"  width="100" height="100" alt="esc" src="./images/close.gif"></img>-->
-    <h3>click the buttons to open new windows!</h3>
 	<div class="buttons">
 			<img id="print"  width="100" height="100"
 		 	alt="print" src="print.gif">
@@ -48,17 +47,22 @@
 
             <img id="cv"  width="100" height="80" alt="cv" src="gallery.gif"></img>
     </div>
+	<h3>click the buttons to open new windows!</h3>
 	<div class="card">
+	<div class="videob">
 		<video id="vid" width="420" eight="240" controls>
 		<source src="./images/vid1.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
 		</video>
-	<div id="button">
+		<div id="button">
 		<p>Next Vid</p>
+		</div>
 	</div>
-<img id="email"  width="100" height="100" alt="cv" src="email.gif"></img>
-<img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
-</div>
+	<div class="contact">
+		<img id="email"  width="100" height="100" alt="cv" src="email.gif"></img>
+		<img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
+	</div>
+	</div>
 </div>
 
 </div>
