--- a/websprite/index.html
+++ b/websprite/index.html
@@ -9,25 +9,25 @@
 	<link rel="stylesheet" href="styleslou.css">
   </head>  
 <body>
+	<div class="title">
+	<h1>Lourdes Salazar</h1>
+	<img src="./images/lourdes.gif" height="100px">
+	</div>
 <div class="all">
-    <h1>Lourdes Salazar</h1>
 	<div class="buttons">
-		<img id="print"  width="100" height="100"
-		 alt="print" src="print.gif">
+		<img id="print"  width="80" height="50"
+		 alt="print" src="./images/clickheels.gif">
 		</img>
 
-		<img id="inter"  width="100" height="100" alt="email" src="interface.gif"></img>
+		<img id="inter"  width="80" height="50" alt="email" src="./images/web.gif"></img>
 
 		<img id="fun"  width="100" height="100" alt="email" src="4fun.gif"></img>
 
-		<img id="social"  width="100" height="100" alt="email" src="social.gif"></img>
+		<img id="catalogue"  width="80" height="50" alt="email" src="images/click.gif"></img>
 
-		<img id="catalogue"  width="60" height="40" alt="email" src="images/catalogue.gif"></img>
+		<img id="mg"  width="80" height="50" alt="motion" src="./images/gallopmotion.gif"></img>
 
-		<img id="heel"  width="80" height="50" alt="email" src="images/clickheels.gif"></img>
-
-		<img id="cv"  width="100" height="80" alt="cv" src="gallery.gif"></img>
-</div>
+	</div>
 <div class ="projects">
 	<div id="mary">
 		<a href="https://salal812.github.io/websprite/magdalene.html">
@@ -45,6 +45,14 @@
 		<a href="cv.html">
 			<iframe src="cv.html" height="600" width="700" title="happy"></iframe></a>
 	</div>
+	<div id="catalogue">
+		<a href="/The_Good_Life/index.html">
+			<iframe src="/Lou/The_Good_Life/index.html" height="600" width="700" title="motion"></iframe></a>
+	</div>
+	<div id="motion">
+		<a href="motion.html">
+			<iframe src="motion.html" height="600" width="700" title="motion"></iframe></a>
+	</div>
 </div>
 <!----<img id="close"  width="100" height="100" alt="esc" src="./images/close.gif"></img>-->
 	<h3>click the buttons to open new windows!</h3>
@@ -61,6 +69,7 @@
 	<div class="contact">
 		<img id="email"  width="100" height="100" alt="cv" src="email.gif"></img>
 		<img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
+		<img id="social"  width="100" height="100" alt="email" src="social.gif"></img>
 	</div>
 	</div>
 </div>
