--- a/websprite/gallery.html
+++ b/websprite/gallery.html
@@ -10,13 +10,28 @@
 <body>
         <div class="image-container">
             <img id="push" src="./images/creek.JPG">
+            <img src="./images/creek_1.JPG">
+            <img src="./images/creek_2.JPG">
+            <img src="images/creek_3.JPG">
+            <img src="./images/creek_4.JPG">
             <h1 id="image-caption">creek</h1>
         </div>
+        <div class="image-container2">
+            <img id="push2" src="./images/Lou 1.JPG">
+            <img src="./images/Lou 4.JPG">
+            <h1 id="image-caption">artist book</h1>
+        </div>
+        <div class="image-container3">
+            <img id="push3" src="./images/lou_light_image_2 2.JPG">
+            <img src="./images/lou_light_image3.JPG">
+            <img src="./images/lou_light_image_6.JPG">
+            <h1 id="image-caption">photos</h1>
+        </div>
+        <div class="image-container4">
+            <img id="push4" src="./images/family.JPG">
+            <h1 id="image-caption">memory</h1>
+        </div>
     
-    <img src="./images/creek_1.JPG">
-    <img src="./images/creek_2.JPG">
-    <img src="images/creek_3.JPG">
-    <img src="./images/creek_4.JPG">
 </body>
 <script src="gallery.js"></script>
 </html>
