--- a/websprite/index.html
+++ b/websprite/index.html
@@ -45,9 +45,9 @@
 		<a href="cv.html">
 			<iframe src="cv.html" height="600" width="700" title="happy"></iframe></a>
 	</div>
-	<div id="catalogue">
-		<a href="/The_Good_Life/index.html">
-			<iframe src="/Lou/The_Good_Life/index.html" height="600" width="700" title="motion"></iframe></a>
+	<div id="gallery">
+		<a href="gallery.html">
+			<iframe src="gallery.html" height="600" width="700" title="gallery"></iframe></a>
 	</div>
 	<div id="motion">
 		<a href="motion.html">
@@ -57,7 +57,7 @@
 <!----<img id="close"  width="100" height="100" alt="esc" src="./images/close.gif"></img>-->
 	<h3>click the buttons to open new windows!</h3>
 	<div class="card">
-	<div class="videob">
+	<!--<div class="videob">
 		<video id="vid" width="420" eight="240" controls>
 		<source src="./images/vid1.mp4" type="video/mp4">
 		  Your browser does not support the video tag.
@@ -65,7 +65,7 @@
 		<div id="button">
 		<p>Next Vid</p>
 		</div>
-	</div>
+	</div>-->
 	<div class="contact">
 		<img id="email"  width="100" height="100" alt="cv" src="email.gif"></img>
 		<img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
