--- a/websprite/index.html
+++ b/websprite/index.html
@@ -10,7 +10,10 @@
   </head>  
 <body>
 	<div class="title">
-	<h1>Lourdes Salazar</h1>
+		<div clas="subtitle">
+			<h2>Welcome to my website click on the gifs below to see some of my work :)</h2>
+			<h3>p.s click on the window to enlarge!</h3>
+		</div>
 	<img src="./images/lourdes.gif" height="100px">
 	</div>
 <div class="all">
@@ -21,12 +24,9 @@
 
 		<img id="inter"  width="80" height="50" alt="email" src="./images/web.gif"></img>
 
-		<img id="fun"  width="100" height="100" alt="email" src="4fun.gif"></img>
-
-		<img id="catalogue"  width="80" height="50" alt="email" src="images/click.gif"></img>
-
 		<img id="mg"  width="80" height="50" alt="motion" src="./images/gallopmotion.gif"></img>
 
+		<img id="fun"  width="100" height="50" alt="email" src="./images/gallery.gif"></img>
 	</div>
 <div class ="projects">
 	<div id="mary">
@@ -45,17 +45,12 @@
 		<a href="cv.html">
 			<iframe src="cv.html" height="600" width="700" title="happy"></iframe></a>
 	</div>
-	<div id="gallery">
-		<a href="gallery.html">
-			<iframe src="gallery.html" height="600" width="700" title="gallery"></iframe></a>
-	</div>
 	<div id="motion">
 		<a href="motion.html">
 			<iframe src="motion.html" height="600" width="700" title="motion"></iframe></a>
 	</div>
 </div>
 <!----<img id="close"  width="100" height="100" alt="esc" src="./images/close.gif"></img>-->
-	<h3>click the buttons to open new windows!</h3>
 	<div class="card">
 	<!--<div class="videob">
 		<video id="vid" width="420" eight="240" controls>
