motion page update

--- a/websprite/motion.html
+++ b/websprite/motion.html
@@ -7,11 +7,11 @@
     <title>Motion Graphics</title>
 </head>
 <body>
-    <img src="./images/tear.gif">
-    <img src="./images/cake.gif">
-    <img src="./images/lush.gif">
-    <img src="./images/squares.gif">
-    <img src="./images/trip.gif">
+    <img src="./images/tear.gif" width="400">
+    <img src="./images/cake.gif" width="400">
+    <img src="./images/lush.gif" width="400">
+    <img src="./images/trip.gif" width="400">
+    <img src="./images/squares.gif" width="400">
     
 </body>
 </html>
