--- a/websprite/motion.html
+++ b/websprite/motion.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motion Graphics</title>
+    <link rel="stylesheet" href="styless2.css">
 </head>
 <body>
     <img src="./images/tear.gif" width="400">
