--- a/websprite/motion.html
+++ b/websprite/motion.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="styless2.css">
 </head>
 <body>
+    <div class="motion">
     <img src="./images/tear.gif" width="400">
     <img src="./images/cake.gif" width="400">
     <img src="./images/lush.gif" width="400">
     <img src="./images/trip.gif" width="400">
     <img src="./images/squares.gif" width="400">
+    </div>
     
 </body>
 </html>
