--- a/book/book.html
+++ b/book/book.html
@@ -104,6 +104,6 @@ var renderer = new THREE.WebGLRenderer( { alpha: true } );
 </script>
 </head>
 <body>
-  <button>next</button>
+  <a href="caps.html">next</a>
 </body>
 </html>
