--- a/book/book.html
+++ b/book/book.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>BLOC MAYUS</title>
-<script type="text/javascript" src="Three.js"></script>
-<script type="text/javascript" src="OrbitControls.js"></script>
+<script type="text/javascript" src="./Three.js"></script>
+<script type="text/javascript" src="./OrbitControls.js"></script>
 <style>
 body { margin: 0; padding: 0; }
 </style>
