--- a/book/book.html
+++ b/book/book.html
@@ -4,6 +4,7 @@
 <title>BLOC MAYUS</title>
 <script type="text/javascript" src="./three.js"></script>
 <script type="text/javascript" src="./OrbitControls.js"></script>
+<link rel="stylesheet" href="./caps.css">
 <style>
 body { margin: 0; padding: 0; }
 </style>
@@ -102,8 +103,8 @@ var renderer = new THREE.WebGLRenderer( { alpha: true } );
 
 }
 </script>
+<a href="caps.html">next</a>
 </head>
 <body>
-  <a href="caps.html">next</a>
 </body>
 </html>
