--- a/book/book.html
+++ b/book/book.html
@@ -106,5 +106,6 @@ var renderer = new THREE.WebGLRenderer( { alpha: true } );
 <a href="caps.html">next</a>
 </head>
 <body>
+  <h1>BLOC MAYÚS (CAPS LOCK) is a screenshot gallery compilled while on a tour of the signs and billboards of Guatemala City, Guatemala through google maps streetview.</h1>
 </body>
 </html>
