--- a/book/book.html
+++ b/book/book.html
@@ -106,6 +106,6 @@ var renderer = new THREE.WebGLRenderer( { alpha: true } );
 <a href="caps.html">next</a>
 </head>
 <body>
-  <h1>BLOC MAYÚS (CAPS LOCK) is a screenshot gallery compilled while on a tour of the signs and billboards of Guatemala City, Guatemala through google maps streetview.</h1>
+  <h1>BLOC MAYÚS (CAPS LOCK) is a screenshot gallery compilled while on a tour of the (rotulos) signs and billboards of Guatemala City, Guatemala through google maps streetview.<br> Hand drawn Rotulos are an important tradition and an artistic expression that makes the visual identity of the city.<br> This project attempts to create a virtual space for collecting and appreciating some of this signs past present and future.</h1>
 </body>
 </html>
