--- a/websprite/index.html
+++ b/websprite/index.html
@@ -1,100 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=d4vice-width, 4nitial-scale=1.0">
-	  <title>Lou</title>
-	<link href="https://fonts.googleapis.com/css2?family=Lexend+Mega&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="styleslou.css">
-  </head>  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lourdes</title>
+</head>
 <body>
-	<div class="title">
-		<div clas="subtitle">
-			<h2>Welcome to my website click on the gifs below to see some of my work :)</h2>
-			<h3>p.s click on the window to enlarge!</h3>
-		</div>
-	<img src="./images/lourdes.gif" height="100px">
-	</div>
-<div class="all">
-	<div class="buttons">
-		<img id="print"  width="80" height="50"
-		 alt="print" src="./images/clickheels.gif">
-		</img>
-
-		<img id="inter"  width="80" height="50" alt="email" src="./images/web.gif"></img>
-
-		<img id="mg"  width="80" height="50" alt="motion" src="./images/gallopmotion.gif"></img>
-
-		<img id="fun"  width="100" height="50" alt="email" src="./images/gallery.gif"></img>
-	</div>
-<div class ="projects">
-	<div id="mary">
-		<a href="https://salal812.github.io/websprite/magdalene.html">
-		<iframe src="https://salal812.github.io/websprite/magdalene.html" height="600" width="700" title="magdalene"></iframe></a>
-	</div>
-	<div id="web">
-		<a href="inone.html">
-			<iframe src="inone.html" height="600" width="700" title="web"></iframe></a>
-	</div>
-	<div id="java">
-		<a href="./Java/json.html">
-			<iframe src="./Java/json.html" height="600" width="700" title="happy"></iframe></a>
-	</div>
-	<div id="resume">
-		<a href="cv.html">
-			<iframe src="cv.html" height="600" width="700" title="happy"></iframe></a>
-	</div>
-	<div id="motion">
-		<a href="motion.html">
-			<iframe src="motion.html" height="600" width="700" title="motion"></iframe></a>
-	</div>
-</div>
-<!----<img id="close"  width="100" height="100" alt="esc" src="./images/close.gif"></img>-->
-	<div class="card">
-	<!--<div class="videob">
-		<video id="vid" width="420" eight="240" controls>
-		<source src="./images/vid1.mp4" type="video/mp4">
-		  Your browser does not support the video tag.
-		</video>
-		<div id="button">
-		<p>Next Vid</p>
-		</div>
-	</div>-->
-	<div class="contact">
-		<img id="email"  width="100" height="100" alt="cv" src="email.gif"></img>
-		<img id="cv"  width="100" height="100" alt="cv" src="cv.gif"></img>
-		<img id="social"  width="100" height="100" alt="email" src="social.gif"></img>
-	</div>
-	</div>
-</div>
-
-</div>
-<!----	<h3> Lab Projects </h3>
-	<ul>
-		<li><a href="https://glitch.com/edit/#!/shard-maize-option?path=index.html%3A1%3A0">Questionnaire</a></li>
-    <li><a href="https://salal812.github.io/Wikipedia_1/">Wikipedia1</a></li>
-    <li><a href="https://salal812.github.io/Wikipedia_2">Wikipedia2</a></li>
-    <li><a href="https://salal812.github.io/music/index.html">Music Collection</a></li>
-    <li><a href="https://airtable.com/tblxomCe7sfBMDSbc/viwOV4Bhmoq0ynGjq?blocks=hide">Airtable Setup</a></li>
-    <li><a href="https://salal812.github.io/JavaIntro/">Javascript Exercise</a></li>
-	<li><a href="https:salal812.github.io/DomManipulation">DOM manipulation</a></li>
-	<li><a href="https:salal812.github.io/AirtableApi">Airtable Api</a></li>
-	<li><a href="https:salal812.github.io/GlitchRemix">Glitch Remix</a></li>
-	</ul>
-	<ul>
-		<h4> Studio Projects </h4>
-	<li><a href=>Elastic Collections</a>
-	<li><a href="https://salal812.github.io/The_Good_Life/">Elastic Collections</a></li>
-	<li><a href="https:salal812.github.io/">DOM manipulation</a></li>
-	</ul>
-	JavaScript DOM Manipulation
-Codecademy screenshot to prove lesson completion
-Airtable API & Show and Tell
-JSON Database / Websockets Glitch Demo Remix
-Studio Projects
-Elastic Collection
-Input / Output
-	</ul>---> 
-<script src="lou.js"></script>
+    <h1>Hello World! Welcome to my website my name is <img src="images/lourdes.gif"></h1>
 </body>
+</html>
