--- a/websprite/index.html
+++ b/websprite/index.html
@@ -7,6 +7,7 @@
     <title>Lourdes</title>
 </head>
 <body>
-    <h1>Hello World! Welcome to my website my name is <img src="images/lourdes.gif"></h1>
+    <h1>Hello World! Welcome to my website my name is <img src="images/lourdes.gif"> Im glad you found your way here and hope that you stay
+    a while. If you wanna see some of the things Ive made click on any of this buttons. </h1>
 </body>
 </html>
