--- a/websprite/index.html
+++ b/websprite/index.html
@@ -7,7 +7,6 @@
     <title>Lourdes</title>
 </head>
 <body>
-    <h1>Hello World! Welcome to my website my name is <img src="images/lourdes.gif" height="80px"> Im glad you found your way here and hope that you stay
-    a while. If you wanna see some cool typographical and layout work <img src="images/click1.gif" height="80px"> . If you wanna see some Digital product design work click (here) For some photography work tap over here. For some motion graphics take a look over (here!). And for some good all things made with my hands go over (here). For some curated monthly tunes you know what to (do). If you wanna find me on socials good luck the @ is hidden somwhere around this site.   </h1>
+    <h1>Hello World! Welcome to my website my name is <img src="images/lourdes.gif" height="80px"> Im glad you found your way here and hope that you stay a while. If you wanna see some cool typographical and layout work <img src="images/click1.gif" height="60px"> . If you wanna see some Digital product design work <img src="images/click2.gif" height="60px"> For some photography work <img src="images/click3.gif" height="60px">. For some motion graphics <img src="images/click.gif" height="60px">. here And for some good things my hands have made go over <img src="images/here.gif" height="60px">. For some curated monthly tunes <img src="images/clickheels.gif" height="60px">. If you wanna find me on socials good luck the @ is hidden somwhere around this site. Thank you for spending time here hope to see u again soon :). </h1>
 </body>
 </html>
