--- a/websprite/magdalene.html
+++ b/websprite/magdalene.html
@@ -166,16 +166,16 @@
         <h1>Gallery Posters</h1>
         <h2>2020</h2>
         <div class="posters">
-          <img src="./images/nikimockup1.png" width="60%"></img>
-          <img src="./images/nikimockup2.png" width="60%"></img>
+          <img src="./images/nikimockup1.png" height="80px"></img>
+          <img src="./images/nikimockup2.png" height="80px"></img>
         </div>
       </div>
       <div class="proj3">
           <h1>Holy Type</h1>
           <h2>2020</h2>
           <div class="posters">
-          <img src="./images/typecross.png" width="60%">
-          <img src="./images/modernists.png" width="60%">
+          <img src="./images/typecross.png" height="80px">
+          <img src="./images/modernists.png" height="80px">
           </div>
       </div>
       <div class="proj4">
