--- a/websprite/index.html
+++ b/websprite/index.html
@@ -11,6 +11,10 @@
     <title>Lourdes</title>
 </head>
 <body>
-    <h1>Hello World! Welcome to my website my name is <img src="images/lourdes.gif" height="80px"> Im glad you found your way here and hope that you stay a while. If you wanna see some cool typographical and layout work <a href="https://salal812.github.io/websprite/magdalene.html"><img src="images/click1.gif" height="20px"></a>. If you wanna see some Digital product design work <img src="images/click2.gif" height="20px"> For some photography work <img src="images/click3.gif" height="20px">. For some motion graphics <img src="images/click.gif" height="20px">. here And for some good things my hands have made go over <img src="images/here.gif" height="60px">. For some curated monthly tunes <img src="images/clickheels.gif" height="20px">. If you wanna find me on socials good luck the @ is hidden somwhere around this site. Thank you for spending time here hope to see u again soon :). </h1>
+    <img src="images/lourdes.gif" height="80px">
+    <h1>Hello World! Welcome to my website <3 </h1>
+    <h2>
+         Im glad you found your way here and hope that you stay a while. If you wanna see some cool typographical and layout work <a href="https://salal812.github.io/websprite/magdalene.html"><img src="images/click1.gif" height="20px"></a>. If you wanna see some Digital product design work <a href="inone.html"><img src="images/click2.gif" height="20px"></a> For some photography work <a href="./Java/json.html"><img src="images/click3.gif" height="20px"></a>. For some motion graphics <a href="motion.html"><img src="images/click.gif" height="20px"></a>. here And for some good things my hands have made go over <img src="images/here.gif" height="20px">. For some curated monthly tunes <img src="images/clickheels.gif" height="26px">. If you wanna find me on socials good luck the @ is hidden somwhere around this site. Thank you for spending time here hope to see u again soon :). 
+    </h2>
 </body>
 </html>
