--- a/websprite/magdalene.html
+++ b/websprite/magdalene.html
@@ -9,6 +9,17 @@
     <title>Wikibook</title>
 </head>
 <body>
+    <div class="newestproj">
+        <h1>BLOC MAYÚS</h1>
+        <h2>2022</h2>
+        <img src="./images/bloc.gif">
+        <img src="./images/caps.gif">
+        <h1>D00MSCR00LL</h1>
+        <h2>2022</h2>
+        <img src="./images/scrollpic.png">
+        <img src="./images/scroll.gif">
+        <img src="./images/scrolla.gif">
+    </div>
     <div class="proj1">
         <div class="head">
             <h1>Mary Magdalene<br> WikiBook</h1>
