--- a/websprite/magdalene.html
+++ b/websprite/magdalene.html
@@ -16,7 +16,7 @@
         <img src="./images/caps.gif">
         <h1>D00MSCR00LL</h1>
         <h2>2022</h2>
-        <img src="./images/scrollpic.png">
+        <img src="./images/scrollpic.png" height="400">
         <img src="./images/scroll.gif">
         <img src="./images/scrolla.gif">
     </div>
