--- a/websprite/magdalene.html
+++ b/websprite/magdalene.html
@@ -9,22 +9,11 @@
     <title>Wikibook</title>
 </head>
 <body>
-    <div class="newestproj">
-        <h1>BLOC MAYÚS</h1>
-        <h2>2022</h2>
-        <img src="./images/bloc.gif">
-        <img src="./images/caps.gif">
-        <h1>D00MSCR00LL</h1>
-        <h2>2022</h2>
-        <img src="./images/scrollpic.png" height="400">
-        <img src="./images/scroll.gif">
-        <img src="./images/scrolla.gif">
-    </div>
     <div class="proj1">
         <div class="head">
             <h1>Mary Magdalene<br> WikiBook</h1>
             <h2>2020</h2>
-            <img src="./images/magdalenemockeup.png" width="20%" height="20%"></img>
+            <img src="./images/magdalenemockeup.png" width="20%"></img>
         </div>
         <img src="./images/Magdalene.gif" width="30%">
         <div class="container">
@@ -173,35 +162,6 @@
                 <a class="next" onclick="plusSlides(1)">❯</a>
             </div>
       </div>
-      <div class="proj2">
-        <h1>Gallery Posters</h1>
-        <h2>2020</h2>
-        <div class="posters">
-          <img src="./images/nikimockup1.png" height="80px"></img>
-          <img src="./images/nikimockup2.png" height="80px"></img>
-        </div>
-      </div>
-      <div class="proj3">
-          <h1>Holy Type</h1>
-          <h2>2020</h2>
-          <div class="posters">
-          <img src="./images/typecross.png" height="80px">
-          <img src="./images/modernists.png" height="80px">
-          </div>
-      </div>
-      <div class="proj4">
-          <h1>Manifesto Poster</h1>
-          <h2>2020</h2>
-          <div class="posters">
-          <img src="./images/manifesto1.jpg" width="50%"></img>
-          <img src="./images/manifesto2.png" width="50%"></img>
-          </div>
-        </div>
-        <div class="proj5">
-            <h1>more</h1>
-            <img src="./images/aslost.png" width="40%"></div>
-
-        </div>
       </div>
 </body>
 </html>
