--- a/websprite/magdalene.html
+++ b/websprite/magdalene.html
@@ -13,7 +13,7 @@
         <div class="head">
             <h1>Mary Magdalene<br> WikiBook</h1>
             <h2>2020</h2>
-            <img src="./images/magdalenemockeup.png" width="20px"></img>
+            <img src="./images/magdalenemockeup.png" height="60px"></img>
         </div>
         <img src="./images/Magdalene.gif" width="30%">
         <div class="container">
