--- a/websprite/indextemp.html
+++ b/websprite/indextemp.html
@@ -38,8 +38,8 @@
 			<iframe src="inone.html" height="600" width="700" title="web"></iframe></a>
 	</div>
 	<div id="java">
-		<a href="./Java/json.html">
-			<iframe src="./Java/json.html" height="600" width="700" title="happy"></iframe></a>
+		<a href="https://www.are.na/lou-salazar/hands-vj46ksw5_cq">
+			<iframe src="https://www.are.na/lou-salazar/hands-vj46ksw5_cq" height="600" width="700" title="happy"></iframe></a>
 	</div>
 	<div id="resume">
 		<a href="cv.html">
