--- a/websprite/index.html
+++ b/websprite/index.html
@@ -11,11 +11,30 @@
     <title>Lourdes</title>
 </head>
 <body>
+    <!----
     <img src="images/lourdes.gif" height="80px">
     <h1>Hello World! Welcome to my website <3 </h1>
     <h2>
          Im glad you found your way here and hope that you stay a while. If you wanna see some cool typographical and layout work <a href="https://salal812.github.io/websprite/magdalene.html"><img src="images/click1.gif" height="20px"></a> and to look through a book I made from one of Wikipedia's longest articles <a href="./type2.html"><img src="./images/clickhere_findoutmore.gif"></a>. If you wanna see some Digital product design work <a href="inone.html"><img src="images/click2.gif" height="20px"></a> For some photography work <a href="./Java/json.html"><img src="images/click3.gif" height="20px"></a>. For some motion graphics <a href="motion.html"><img src="images/click.gif" height="20px"></a>. here And for some good things my hands have made go over <img src="images/here.gif" height="20px">. For some curated monthly tunes <img src="images/clickheels.gif" height="26px">. 
     </h2>
-    <h3>Thank you for spending time here hope to see u again soon :).</h3>
+    <h3>Thank you for spending time here hope to see u again soon :).</h3> ---->
+    <div class="butt">
+        <div class="butt1">
+            <img src="images/latest.gif" width="150px" height="150px">
+            <img src="images/graph.gif" width="150px" height="150px">
+            <img src="images/photo.gif" width="150px" height="150px">
+        </div>
+        <div class="butt2">
+            <img src="images/vid.gif" width="150px" height="150px">
+            <img src="images/style.gif" width="150px" height="150px">
+            <img src="images/ommatm.gif" width="150px" height="150px">
+        </div>
+        <div class="butt3">
+            <img src="images/socials.gif" width="150px" height="150px">
+            <img src="images/tunes.gif" width="150px" height="150px">
+            <img src="images/misc.gif" width="150px" height="150px">
+        </div>
+    </div>
+    
 </body>
 </html>
