--- a/websprite/indextemp.html
+++ b/websprite/indextemp.html
@@ -27,6 +27,8 @@
 		<img id="mg"  width="80" height="50" alt="motion" src="./images/gallopmotion.gif"></img>
 
 		<img id="fun"  width="100" height="50" alt="email" src="./images/gallery.gif"></img>
+
+		<img id="renou"  width="100" height="50" alt="renou" src="./images/click3.gif"></img>
 	</div>
 <div class ="projects">
 	<div id="mary">
@@ -48,6 +50,10 @@
 	<div id="motion">
 		<a href="motion.html">
 			<iframe src="motion.html" height="600" width="700" title="motion"></iframe></a>
+	</div>
+	<div id="renou">
+		<a href="https://www.instagram.com/renougt/">
+			<iframe src="https://www.instagram.com/renougt/" height="600" width="700" title="renou"></iframe></a>
 	</div>
 </div>
 <!----<img id="close"  width="100" height="100" alt="esc" src="./images/close.gif"></img>-->
