--- a/websprite/index.html
+++ b/websprite/index.html
@@ -21,7 +21,7 @@
     <div class="butt">
         <div class="butt1">
             <img src="images/latest.gif" width="150px" height="150px">
-            <img src="images/graph.gif" width="150px" height="150px">
+            <a href="https://www.are.na/lou-salazar/graphic-design-kmaogtflq-4"><img src="images/graph.gif" width="150px" height="150px"></a>
             <img src="images/photo.gif" width="150px" height="150px">
         </div>
         <div class="butt2">
