updated music feature

--- a/websprite/index.html
+++ b/websprite/index.html
@@ -30,11 +30,14 @@
             <img src="images/ommatm.gif" width="150px" height="150px">
         </div>
         <div class="butt3">
-            <img src="images/socials.gif" width="150px" height="150px">
-            <img src="images/tunes.gif" width="150px" height="150px">
+            <a href="https://www.tumblr.com/louphoriaa"><img src="images/socials.gif" width="150px" height="150px"></a>
+            <img id="tunes" src="images/tunes.gif" width="150px" height="150px">
             <img src="images/misc.gif" width="150px" height="150px">
         </div>
     </div>
-    
+    <div class="extrascont">
+        <iframe id="extras" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/00F5ZXphR8Obu4uDhZqsxp?utm_source=generator&theme=0" width="20%" height="352" frameBorder="100" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
 </body>
+<script src="louphoria.js"></script>
 </html>
