--- a/websprite/index.html
+++ b/websprite/index.html
@@ -25,7 +25,7 @@
             <img src="images/photo.gif" width="150px" height="150px">
         </div>
         <div class="butt2">
-            <img src="images/vid.gif" width="150px" height="150px">
+            <a href="motion.html"><img src="images/vid.gif" width="150px" height="150px"></a>
             <img src="images/style.gif" width="150px" height="150px">
             <img src="images/ommatm.gif" width="150px" height="150px">
         </div>
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="extrascont">
-        <iframe id="extras" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/00F5ZXphR8Obu4uDhZqsxp?utm_source=generator&theme=0" width="20%" height="352" frameBorder="100" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe id="extras" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/00F5ZXphR8Obu4uDhZqsxp?utm_source=generator&theme=0" width="50%" height="352" frameBorder="100" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 </body>
 <script src="louphoria.js"></script>
