--- a/websprite/index.html
+++ b/websprite/index.html
@@ -19,18 +19,21 @@
     </h2>
     <h3>Thank you for spending time here hope to see u again soon :).</h3> ---->
     <div class="butt">
+        <div class="intro">
+            <a href="resume.html"><img src="images/cvstar.png" width="150px" height="150px"></a>
+        </div>
         <div class="butt1">
-            <img src="images/latest.gif" width="150px" height="150px">
+            <a href="256.html"><img src="images/latest.gif" width="150px" height="150px"></a>
             <a href="https://www.are.na/lou-salazar/graphic-design-kmaogtflq-4"><img src="images/graph.gif" width="150px" height="150px"></a>
             <img src="images/photo.gif" width="150px" height="150px">
         </div>
         <div class="butt2">
             <a href="motion.html"><img src="images/vid.gif" width="150px" height="150px"></a>
             <img src="images/style.gif" width="150px" height="150px">
-            <img src="images/ommatm.gif" width="150px" height="150px">
+            <a href="https://www.tumblr.com/louphoriaa"><img src="images/ommatm.gif" width="150px" height="150px"></a>
         </div>
         <div class="butt3">
-            <a href="https://www.tumblr.com/louphoriaa"><img src="images/socials.gif" width="150px" height="150px"></a>
+            <a href="https://www.instagram.com/louuuphoria/"><img src="images/socials.gif" width="150px" height="150px"></a>
             <img id="tunes" src="images/tunes.gif" width="150px" height="150px">
             <img src="images/misc.gif" width="150px" height="150px">
         </div>
