--- a/websprite/index.html
+++ b/websprite/index.html
@@ -21,6 +21,7 @@
     <div class="butt">
         <div class="intro">
             <a href="resume.html"><img src="images/cvstar.png" width="150px" height="150px"></a>
+            <a href="mailto:lousalazarcastillo@gmail.com"><img src="images/email.png" width="80px" height="80px"></a>
         </div>
         <div class="butt1">
             <a href="256.html"><img src="images/latest.gif" width="150px" height="150px"></a>
@@ -29,13 +30,13 @@
         </div>
         <div class="butt2">
             <a href="motion.html"><img src="images/vid.gif" width="150px" height="150px"></a>
-            <img src="images/style.gif" width="150px" height="150px">
-            <a href="https://www.tumblr.com/louphoriaa"><img src="images/ommatm.gif" width="150px" height="150px"></a>
+            <!--<img src="images/style.gif" width="150px" height="150px">-->
+            <img src="images/misc.gif" width="150px" height="150px">
+            <a href="https://lulu-1-2-3-blog.tumblr.com/ "><img src="images/ommatm.gif" width="150px" height="150px"></a>
         </div>
         <div class="butt3">
             <a href="https://www.instagram.com/louuuphoria/"><img src="images/socials.gif" width="150px" height="150px"></a>
             <img id="tunes" src="images/tunes.gif" width="150px" height="150px">
-            <img src="images/misc.gif" width="150px" height="150px">
         </div>
     </div>
     <div class="extrascont">
