--- a/websprite/motion.html
+++ b/websprite/motion.html
@@ -10,7 +10,7 @@
 <body>
     <div class="motion">
     <img src="./images/tear.gif" width="400">
-    <img src="./images/cake.gif" width="400">
+    <!--<img src="./images/cake.gif" width="400">-->
     <img src="./images/lush.gif" width="400">
     <img src="./images/trip.gif" width="400">
     <img src="./images/squares.gif" width="400">
